# DriftEngine

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Project Overview.md  README.md  package-lock.json  render.yaml
.claude/: settings.local.json
.claude/plan/: connect-fullstack.md
backend/: main.py  requirements.txt
backend/.claude/: settings.local.json
backend/models/: schemas.py
backend/routers/: simulation.py
backend/services/: data_ingestion.py  feature_engineering.py  parameter_builder.py  regime_analysis.ipynb  regime_classifier.py  results_aggregator.py  supabase_helpers.py  test.py
backend/supabase/migrations/: 001_add_regime_columns.sql
frontend/: index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: FanChart.jsx  FanChartCanvas.jsx  MonteCarloChart.jsx  RegimePanel.jsx  RiskDashboard.jsx  SimulationLoader.jsx  TerminalDist.jsx  TickerInput.jsx
frontend/src/components/ui/: badge.jsx  button.jsx  card.jsx  input.jsx  liquid-glass-button.tsx  ticker-combobox.jsx  web-gl-shader.tsx
frontend/src/data/: tickers.json
frontend/src/lib/: logger.js
frontend/src/screens/: AdvancedForecastAnalysis.jsx  LandingTickerSelection.jsx  MethodologyScreen.jsx  StockForecastDashboard.jsx
frontend/src/styles/: components.css
simulation/: CMakeLists.txt
simulation/bindings/: pybind_wrapper.cpp
simulation/src/: _example.json  distributions.cpp  distributions.h  garch.cpp  garch.h  main.cpp  monte_carlo.cpp  monte_carlo.h  regime.h  results.h
